--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo List</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="todo-container">
-    <h1>Todo List</h1>
-    <div class="input-section">
-      <input type="text" id="task-input" placeholder="Add a todo...">
-      <input type="date" id="date-input" placeholder="dd/mm/yyyy">
-      <button id="add-task-btn">+</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="todo-container">
+      <h1>Todo List</h1>
+      <div class="input-section">
+        <input type="text" id="task-input" placeholder="Add a todo..."/>
+        <input type="date" id="date-input" placeholder="dd/mm/yyyy"/>
+        <button id="add-task-btn">+</button>
+      </div>
+      <div class="action-buttons">
+        <button id="filter-btn">FILTER</button>
+        <button id="delete-all-btn">DELETE ALL</button>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>TASK</th>
+            <th>DUE DATE</th>
+            <th>STATUS</th>
+            <th>ACTIONS</th>
+          </tr>
+        </thead>
+        <tbody id="task-list">
+          <tr>
+            <td colspan="4">No task found</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="action-buttons">
-      <button id="filter-btn">FILTER</button>
-      <button id="delete-all-btn">DELETE ALL</button>
-    </div>
-    <table>
-      <thead>
-        <tr>
-          <th>TASK</th>
-          <th>DUE DATE</th>
-          <th>STATUS</th>
-          <th>ACTIONS</th>
-        </tr>
-      </thead>
-      <tbody id="task-list">
-        <tr><td colspan="4">No task found</td></tr>
-      </tbody>
-    </table>
-  </div>
-  <script src="js/script.js"></script>
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
